src/css/style.less
/* ... */
.mce-panel {
  border-radius: 5px;

  iframe {
    border-radius: 0 0 5px 5px;
  }
}

.mce-panel,
.mce-btn,
.mce-btn:hover,
.mce-content-body {
  background-color: @inactive-grey !important;
  border-width: 0 !important;
}

.mce-statusbar .mce-path {
  display: none !important;
}

.social-auth-options {
  text-align: center;
  margin: 10px auto;

  ul {
    margin: 0;
    padding: 0;

    li {
      list-style: none;
      display: inline;
      margin: 0 2px;

      i {
        .font-size(4);
      }
    }
  }
}

#chat-widget {
  position: fixed;
  bottom: 10px;
  right: 50px;
  z-index: 1000;

  #chat-window {
    position: fixed;
    top: 0;
    bottom: 10px;
    right: 50px;
    padding: 0;
    margin: 0;
    width: 100%;
    max-width: 350px;
    height: 100%;

    .chat-overview {
      box-shadow: 0 -2px 5px #777;
      border-radius: 8px;
      background-color: rgba(255, 255, 255, 0.9);
      position: relative;

      .message {
        .media-body {
          background-color: @active-white;
        }
      }

      .message-widget {
        padding-bottom: 10px;
      }
    }

    .chat-close {
      position: absolute;
      top: 5px;
      right: 5px;
      z-index: 1000;

      .btn {
        padding: 3px 4px;
      }
    }

    .overview {
      .mainbox {
        width: 100%;
      }
    }
  }
}

.chat-btn,
.btn.chat-btn {
  color: @active-white;
  background-color: @primary;
  /*padding: 10px 15px;*/
  border-radius: 50%;
  border: 1px @primary solid;
  box-shadow: 0 0 10px #777;
  height: 50px;
  width: 50px;
  position: relative;
  outline-width: 0;

  .badge {
    position: relative;
    top: -15px;
    left: -10px;
    border: 1px @primary solid;
    color: @primary;
    background-color: @active-white;
  }

  [class^="tunga-icon-"],
  [class*=" tunga-icon-"] {
    .font-size(2.0);
    font-weight: 700;
  }
}

.chat-btn:hover,
.btn.chat-btn:hover,
.btn.chat-btn:focus,
.btn.chat-btn:active {
  color: @primary;
  background-color: @active-white;
  outline-color: transparent !important;

  .badge {
    color: @active-white;
    background-color: @primary;
  }
}

.modal-header {
  border-bottom-width: 0;
  padding-bottom: 0;
}

.modal form {
  margin: 0 auto;

  .modal-footer {
    border-top: 0;
  }
}

.task-form,
.task-form.form-wrapper {
  max-width: 800px;

  .section-title {
    padding: 15px 10px;
    border-bottom: 1px @border-grey solid;

    h4 {
      margin: 0;
      float: left;
      padding-left: 10px;
      font-weight: 300;
    }

    .slider {
      i {
        color: @primary;
        margin: 2px;
      }
    }
  }

  form {
    max-width: 800px;

    .form-group {
      max-width: 600px;
      margin: 0 auto 15px;
    }

    .error {
      max-width: 600px;
      display: block;
      margin: 0 auto;
    }

    .step {
      display: flex;
      align-items: center;
      justify-content: center;
      flex-direction: column;
      height: 400px;
      min-height: initial;
      overflow-y: scroll;

      > * {
        width: 100%;
      }
    }
  }

  .nav {
    border-top: 1px @border-grey solid;
    padding: 20px;
    min-height: 73px;

    .btn-borderless {
      padding: 0;

      .fa {
        .font-size(1.8);
      }
    }
  }
}

.profile-form,
.profile-form.form-wrapper {
  max-width: 600px;

  .section-title {
    padding: 15px 10px;
    border-bottom: 1px @border-grey solid;

    h4 {
      margin: 0;
      float: left;
      padding-left: 10px;
      font-weight: 300;
    }

    .slider {
      i {
        color: @primary;
        margin: 2px;
      }
    }
  }

  form {
    max-width: 600px;

    .form-group {
      max-width: 600px;
      margin: 0 auto 15px;
    }

    .error {
      max-width: 600px;
      display: block;
      margin: 0 auto;
    }

    .step {
      display: flex;
      align-items: center;
      justify-content: center;
      flex-direction: column;
      height: 400px;
      min-height: initial !important;
      overflow-y: scroll;

      > * {
        width: 100%;
      }
    }
  }

  .nav {
    border-top: 1px @border-grey solid;
    padding: 20px;
    min-height: 73px;
  }
}

.profile-form-dialog,
.profile-form-dialog.modal-dialog {
  margin-top: 120px;

  .modal-header {
    position: absolute;
    right: 0;
    z-index: 11;
  }

  .modal-body {
    padding: 0;
    margin: 0;
  }

  .title-bar {
    text-align: center;
    color: @primary;
    border-bottom: 1px @border-grey solid;
    padding: 20px 0;

    > * {
      margin: 0;
    }
  }

  .status-bar {
  }

  .thank-you {
    text-align: center;
    padding-top: 80px;
    .font-size(1.7);
    font-weight: 300;
  }

  .profile-form,
  .profile-form.form-wrapper {
    max-width: 600px;
    margin: 0 auto;

    .form {
      max-width: 100%;
    }

    form {
      max-width: 100%;
      padding: 20px 0 0;

      .step {
        height: 320px;
        min-height: initial;
      }
    }
  }
}

.alert-success,
.alert.alert-success {
  color: @secondary;
  background: @active-white none;
  border-color: @secondary;
}

.showcase,
.modal,
.chat-widget {
  input,
  select,
  textarea,
  .form-control,
  .rw-input {
    background-color: @inactive-grey;
  }

  .rw-input {
    background-color: @inactive-grey !important;
  }

  .input-group {
    .input-group-addon {
      background-color: @inactive-grey;
    }
  }

  .mce-panel,
  .mce-btn,
  .mce-btn:hover,
  .mce-content-body {
    background-color: @inactive-grey !important;
  }
}
/* ... */

